...
        android:fontFamily="@font/quicksand"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickRoleText" />

    <Button
        android:id="@+id/organizerButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/quicksand"
        android:text="ORGANIZER"
...
